--- a/nx.json
+++ b/nx.json
@@ -2,10 +2,7 @@
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "defaultBase": "master",
   "namedInputs": {
-    "default": [
-      "{projectRoot}/**/*",
-      "sharedGlobals"
-    ],
+    "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "production": [
       "default",
       "!{projectRoot}/.eslintrc.json",
@@ -54,16 +51,12 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": [
-        "apps/product-e2e/**/*"
-      ]
+      "exclude": ["apps/product-e2e/**/*", "apps/api-gateway-e2e/**/*"]
     }
   ],
   "targetDefaults": {
     "test": {
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"]
     }
   }
 }
