--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,12 @@
     },
     {
       "path": "./apps/product"
+    },
+    {
+      "path": "./apps/api-gateway-e2e"
+    },
+    {
+      "path": "./apps/api-gateway"
     }
   ]
 }
