--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build:all": "nx run-many --target build --all --verbose",
     "test:all": "nx run-many --target test --all --verbose",
     "lint:all": "nx run-many --target lint --all --verbose",
-    "lint:fix:all": "nx run-many --target lint --all --fix"
+    "lint:fix:all": "nx run-many --target lint --all --fix",
+    "show:affected": "nx show projects --affected --base=origin/main --head=HEAD",
+    "target:affected": "nx affected -t lint test build --base=origin/main --head=HEAD"
   },
   "private": true,
   "dependencies": {
