--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "prepare": "husky",
     "start:api": "nx serve api-gateway --skip-nx-cache",
     "build:api": "nx build api-gateway",
     "test:api": "nx test api-gateway",
@@ -16,6 +17,7 @@
     "lint:all": "nx run-many --target lint --all --verbose",
     "lint:fix:all": "nx run-many --target lint --all --fix",
     "show:affected": "nx show projects --affected --base=origin/main --head=HEAD",
+    "lint:affected": "nx affected -t lint --base=origin/main --head=HEAD",
     "target:affected": "nx affected -t lint test build --base=origin/main --head=HEAD"
   },
   "private": true,
@@ -26,6 +28,9 @@
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
+  },
+  "lint-staged": {
+    "**/*.ts": ["eslint --fix", "prettier --write"]
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -47,8 +52,10 @@
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "lint-staged": "^15.5.1",
     "nx": "20.8.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
